--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
+        hilt_version = '2.44.1'
+        retrofit_version = '2.9.0'
+        moshi_version = '1.12.0'
+        okHttp_logger_version = '4.10.0'
+
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
