--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,17 @@ buildscript {
         retrofit_version = '2.9.0'
         moshi_version = '1.12.0'
         okHttp_logger_version = '4.10.0'
-
+        nav_version = '2.5.3'
+        lifecycle_ktx_version ='2.5.1'
+        constraint_layout_version = '2.1.4'
+        core_ktx_version = '1.9.0'
+        appcompact_version = '1.6.0'
+        material_version = '1.7.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.44.1' apply false
 }
