--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
         hilt_version = '2.44.1'
         retrofit_version = '2.9.0'
         moshi_version = '1.12.0'
@@ -11,6 +10,10 @@ buildscript {
         core_ktx_version = '1.9.0'
         appcompact_version = '1.5.1'
         material_version = '1.7.0'
+    }
+
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
